crates/pg_syntax/tests/snapshots/postgres_regress/regex@70.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'a' ~ '((((((a+|)+|)+|)+|)+|)+|)';"
---
SelectStmt@0..41
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..40
    AExpr@7..40
      AConst@7..10
        Sconst@7..10 "'a'"
      Whitespace@10..11 " "
      Op@11..12 "~"
      Whitespace@12..13 " "
      AConst@13..40
        Sconst@13..40 "'((((((a+|)+|)+|)+|)+ ..."
  Ascii59@40..41 ";"

