crates/pg_syntax/tests/snapshots/postgres_regress/regex@73.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'x' ~ 'a^(^)bcd*xy(((((($a+|)+|)+|)+$|)+|)+|)^$';"
---
SelectStmt@0..56
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..55
    AExpr@7..55
      AConst@7..10
        Sconst@7..10 "'x'"
      Whitespace@10..11 " "
      Op@11..12 "~"
      Whitespace@12..13 " "
      AConst@13..55
        Sconst@13..55 "'a^(^)bcd*xy(((((($a+ ..."
  Ascii59@55..56 ";"

