crates/pg_syntax/tests/snapshots/postgres_regress/regex@78.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('Programmer', '(\\w)(.*?\\1)', 'g');"
---
SelectStmt@0..56
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..54
    FuncCall@7..54
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..34
        Sconst@22..34 "'Programmer'"
      Ascii44@34..35 ","
      Whitespace@35..36 " "
      AConst@36..49
        Sconst@36..49 "'(\\w)(.*?\\1)'"
      Ascii44@49..50 ","
      Whitespace@50..51 " "
      AConst@51..54
        Sconst@51..54 "'g'"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

