crates/pg_syntax/tests/snapshots/postgres_regress/regex@81.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('llmmmfff', '^(l*){1,1}(.*)(f*)$');"
---
SelectStmt@0..57
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..55
    FuncCall@7..55
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..32
        Sconst@22..32 "'llmmmfff'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..55
        Sconst@34..55 "'^(l*){1,1}(.*)(f*)$'"
  Ascii41@55..56 ")"
  Ascii59@56..57 ";"

