crates/pg_syntax/tests/snapshots/postgres_regress/regex@84.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('llmmmfff', '^(l*?)(.*)(f*)$');"
---
SelectStmt@0..53
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..51
    FuncCall@7..51
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..32
        Sconst@22..32 "'llmmmfff'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..51
        Sconst@34..51 "'^(l*?)(.*)(f*)$'"
  Ascii41@51..52 ")"
  Ascii59@52..53 ";"

